--- a/index.html
+++ b/index.html
@@ -25,18 +25,17 @@
 
 <script id="employee-tpl" type="text/x-handlebars-template">
     <div class='header'>
-		<a href='#' class="button header-button header-button-left">Back</a>
+		<a href='javascript:history.back()' class="button header-button header-button-left">Back</a>
 		<h1>Transaction</h1>
 		<a href='javascript:false;' class="button header-button header-button-right kGo">Go</a>
 	</div>
     <div class='details'>
-        <h1 class="nickname editable text"><span>{{nickname}}</span></h1>
-        <h2>{{group}}</h2>
+        <h1><b class="nickname editable text"><span>{{nickname}}</span></b> <span class="dim">{{group}}</span></h1>        
         <ul>
-            {{#unless pin}}<li class="pin editable">PIN <span style="display:none"></span></li>{{/unless}}
-            <li class="data editable text">Recipient <span>{{data}}</span></li>
-            <li class="amount editable">Amount <span>{{amount}}</span></li>
-            {{#if customer}}<li class="customer editable">Customer <span>{{customer}}<span></li>{{/if}}
+            {{#unless pin}}<li class="pin editable">PIN <span style="display:none"></span> </li>{{/unless}}
+            <li class="data editable text">Account <span>{{data}}</span> </li>
+            <li class="amount editable">Amount <span>{{amount}}</span> </li>
+            {{#if customer}}<li class="customer editable">Customer <span>{{customer}}<span> </li>{{/if}}
         </ul>
     </div>
 </script>
