--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <script id="employee-tpl" type="text/x-handlebars-template">
     <div class='header'>
-		<a href='javascript:history.back()' class="button header-button header-button-left">Back</a>
+		<a href='javascript:history.back()' class="button header-button header-button-left kBack">Back</a>
 		<h1>Transaction</h1>
 		<a href='javascript:false;' class="button header-button header-button-right kGo">Go</a>
 	</div>
