--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 		<link href="css/styles.css" rel="stylesheet" />
 		<script src="css/source-sans-pro.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+		<title>CLIQ</title>
 	</head>
 <body>
 <script id="home-tpl" type="text/x-handlebars-template">
     <div class='header'>
-		<h1>
-		TopupApp 
+		<h1 class="editables">
+		CLIQ 
 		<input class="member" type="tel" placeholder="member" value="{{member}}" /> 
-		<input class="pin" type="password" placeholder="pin" value = "{{pin}}" />
+		<input class="pin" type="tel" placeholder="pin" value = "{{pin}}" />
 		</h1>
 	</div>
     <div class='search-bar'><input class='search-key' type="search"/></div>
@@ -19,7 +20,7 @@
 
 <script id="employee-li-tpl" type="text/x-handlebars-template">
     {{#.}}
-    <li><a href="#employees/{{id}}">{{nickname}} {{#if data}}({{data}}){{/if}}<br/>{{group}}</a></li>
+    <li class="{{cssise group}} {{cssise sku}}"><a href="#employees/{{id}}">{{nickname}} {{#if data}}({{data}}){{/if}}<br/>{{group}}</a></li>
     {{/.}}
 </script>
 
@@ -32,16 +33,16 @@
 <script id="employee-tpl" type="text/x-handlebars-template">
     <div class='header'>
 		<a href='javascript:history.back()' class="button header-button header-button-left kBack">Back</a>
-		<h1>Transaction</h1>
+		<h1>CLIQ: Transaction</h1>
 		<a href='javascript:false;' class="button header-button header-button-right kGo">Go</a>
 	</div>
     <div class='details'>
         <h1><b class="nickname editable text"><span>{{nickname}}</span></b> <span class="dim">{{group}}</span></h1>        
         <ul>
-            {{#unless pin}}<li class="pin editable">PIN <span style="display:none"></span> </li>{{/unless}}
-            <li class="data editable text">Account <span>{{data}}</span> </li>
-            <li class="amount editable">Amount <span>{{amount}}</span> </li>
-            {{#if customer}}<li class="customer editable tel">Customer <span>{{customer}}<span> </li>{{/if}}
+            {{#unless pin}}<li class="pin editable"><b>PIN</b><span style="display:none"></span></li>{{/unless}}
+            <li class="data editable text"><b>Account</b><span>{{data}}</span></li>
+            <li class="amount editable"><b>Amount</b><span>{{amount}}</span></li>
+            {{#if customer}}<li class="customer editable tel"><b>Customer</b><span>{{customer}}<span></li>{{/if}}
         </ul>
 		<br />
 		<div class="response"></div>
